add simulation results

--- a/notebooks/explore manifold using FR tsne and umap/dimension reduction layout.ipynb
+++ b/notebooks/explore manifold using FR tsne and umap/dimension reduction layout.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-17T12:20:49.592064Z",
-     "start_time": "2024-09-17T12:20:44.258224Z"
+     "end_time": "2024-09-21T09:30:22.328026Z",
+     "start_time": "2024-09-21T09:30:18.152119Z"
     }
    },
    "source": [
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T12:23:24.814887Z",
-     "start_time": "2024-09-17T12:23:24.726184Z"
+     "end_time": "2024-09-21T09:30:22.404419Z",
+     "start_time": "2024-09-21T09:30:22.329030Z"
     }
    },
    "cell_type": "code",
@@ -45,13 +45,13 @@
    ],
    "id": "f77c352da5f537d",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T12:30:22.390758Z",
-     "start_time": "2024-09-17T12:30:22.361846Z"
+     "end_time": "2024-09-21T09:30:22.420364Z",
+     "start_time": "2024-09-21T09:30:22.406413Z"
     }
    },
    "cell_type": "code",
@@ -67,13 +67,13 @@
    ],
    "id": "53d2587904fd2095",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T12:30:26.015662Z",
-     "start_time": "2024-09-17T12:30:25.956270Z"
+     "end_time": "2024-09-21T09:30:22.483775Z",
+     "start_time": "2024-09-21T09:30:22.421361Z"
     }
    },
    "cell_type": "code",
@@ -85,13 +85,13 @@
    ],
    "id": "807622f8d3fc2347",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T12:33:12.537401Z",
-     "start_time": "2024-09-17T12:33:12.510498Z"
+     "end_time": "2024-09-21T09:30:22.499712Z",
+     "start_time": "2024-09-21T09:30:22.484764Z"
     }
    },
    "cell_type": "code",
@@ -101,20 +101,20 @@
    ],
    "id": "29fb8dc1150df2c7",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T12:31:13.770568Z",
-     "start_time": "2024-09-17T12:31:13.756615Z"
+     "end_time": "2024-09-21T09:30:22.515672Z",
+     "start_time": "2024-09-21T09:30:22.500708Z"
     }
    },
    "cell_type": "code",
    "source": "Se2_lbs = lbs[mask1]",
    "id": "85b5060eba0d8f0d",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -125,28 +125,28 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T12:31:15.786620Z",
-     "start_time": "2024-09-17T12:31:15.773663Z"
+     "end_time": "2024-09-21T09:30:22.531605Z",
+     "start_time": "2024-09-21T09:30:22.516655Z"
     }
    },
    "cell_type": "code",
    "source": "tsne_X1 = X1 = (moments.data)[mask1][:, 1:]",
    "id": "e2830f245e199c2a",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T12:31:24.158875Z",
-     "start_time": "2024-09-17T12:31:16.543862Z"
+     "end_time": "2024-09-21T09:30:31.447789Z",
+     "start_time": "2024-09-21T09:30:22.893216Z"
     }
    },
    "cell_type": "code",
    "source": "tsne_res = tsne(n_components=2).fit_transform(tsne_X1)",
    "id": "7a7682a08f891603",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 8
   },
   {
    "metadata": {
@@ -938,21 +938,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T12:36:10.077904Z",
-     "start_time": "2024-09-17T12:36:10.070927Z"
+     "end_time": "2024-09-21T09:30:58.198144Z",
+     "start_time": "2024-09-21T09:30:58.186184Z"
     }
    },
    "cell_type": "code",
    "source": "from sklearn.neighbors import NearestNeighbors",
    "id": "8fd3ddfa869cd85a",
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T12:32:38.109487Z",
-     "start_time": "2024-09-17T12:32:38.104505Z"
+     "end_time": "2024-09-21T09:30:59.154529Z",
+     "start_time": "2024-09-21T09:30:59.140576Z"
     }
    },
    "cell_type": "code",
@@ -965,18 +965,18 @@
        "((4200,), (4200, 2))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 23
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T12:43:40.689616Z",
-     "start_time": "2024-09-17T12:43:31.266277Z"
+     "end_time": "2024-09-21T09:31:09.940644Z",
+     "start_time": "2024-09-21T09:31:00.899874Z"
     }
    },
    "cell_type": "code",
@@ -991,13 +991,13 @@
    ],
    "id": "8458951619dfff18",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T12:43:43.407105Z",
-     "start_time": "2024-09-17T12:43:43.401126Z"
+     "end_time": "2024-09-21T09:31:12.151582Z",
+     "start_time": "2024-09-21T09:31:12.138527Z"
     }
    },
    "cell_type": "code",
@@ -1010,18 +1010,18 @@
        "((4114, 2), (4114, 2), (86, 2))"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 32
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T12:45:26.911206Z",
-     "start_time": "2024-09-17T12:45:26.883307Z"
+     "end_time": "2024-09-21T09:31:22.060534Z",
+     "start_time": "2024-09-21T09:31:22.031042Z"
     }
    },
    "cell_type": "code",
@@ -1045,13 +1045,13 @@
      ]
     }
    ],
-   "execution_count": 33
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T13:30:43.670435Z",
-     "start_time": "2024-09-17T13:30:43.660469Z"
+     "end_time": "2024-09-21T09:31:24.968682Z",
+     "start_time": "2024-09-21T09:31:24.955718Z"
     }
    },
    "cell_type": "code",
@@ -1064,13 +1064,13 @@
    ],
    "id": "12ad7d65f8ab29b9",
    "outputs": [],
-   "execution_count": 56
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T13:45:10.034700Z",
-     "start_time": "2024-09-17T13:45:08.980820Z"
+     "end_time": "2024-09-21T09:31:30.906287Z",
+     "start_time": "2024-09-21T09:31:29.784535Z"
     }
    },
    "cell_type": "code",
@@ -1102,13 +1102,13 @@
    ],
    "id": "5c48076b17f6b4fa",
    "outputs": [],
-   "execution_count": 87
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T13:45:35.231753Z",
-     "start_time": "2024-09-17T13:45:35.173647Z"
+     "end_time": "2024-09-21T09:31:30.937058Z",
+     "start_time": "2024-09-21T09:31:30.907278Z"
     }
    },
    "cell_type": "code",
@@ -1136,13 +1136,13 @@
    ],
    "id": "42180bcf5faa1747",
    "outputs": [],
-   "execution_count": 89
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T13:59:54.193064Z",
-     "start_time": "2024-09-17T13:59:54.188077Z"
+     "end_time": "2024-09-21T09:31:33.046213Z",
+     "start_time": "2024-09-21T09:31:33.033258Z"
     }
    },
    "cell_type": "code",
@@ -1152,13 +1152,13 @@
    ],
    "id": "758fbf2d778e55bd",
    "outputs": [],
-   "execution_count": 104
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T14:03:08.406968Z",
-     "start_time": "2024-09-17T14:03:08.394008Z"
+     "end_time": "2024-09-21T09:31:34.055994Z",
+     "start_time": "2024-09-21T09:31:34.043038Z"
     }
    },
    "cell_type": "code",
@@ -1168,13 +1168,13 @@
    ],
    "id": "230d313304f2c183",
    "outputs": [],
-   "execution_count": 108
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T14:06:57.036326Z",
-     "start_time": "2024-09-17T14:06:57.024359Z"
+     "end_time": "2024-09-21T09:31:34.425597Z",
+     "start_time": "2024-09-21T09:31:34.409641Z"
     }
    },
    "cell_type": "code",
@@ -1184,45 +1184,82 @@
    ],
    "id": "ed09ec37b0b92f56",
    "outputs": [],
-   "execution_count": 113
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T14:13:06.271774Z",
-     "start_time": "2024-09-17T14:13:06.257820Z"
+     "end_time": "2024-09-21T10:38:22.763255Z",
+     "start_time": "2024-09-21T10:38:22.749590Z"
     }
    },
    "cell_type": "code",
-   "source": "new_cmap = plt.get_cmap('coolwarm')(norm_theta)",
+   "source": "new_cmap = plt.get_cmap('bwr')(norm_theta)",
    "id": "65ebf6dd36fc189a",
    "outputs": [],
-   "execution_count": 122
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T14:13:16.259362Z",
-     "start_time": "2024-09-17T14:13:14.368364Z"
+     "end_time": "2024-09-21T09:32:26.530710Z",
+     "start_time": "2024-09-21T09:32:26.514776Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "plt.style.use('default')",
+   "id": "cb4387ba69360808",
+   "outputs": [],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T10:38:30.893161Z",
+     "start_time": "2024-09-21T10:38:29.010565Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "from matplotlib.cm import ScalarMappable\n",
+    "from matplotlib.colors import Normalize\n",
+    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
+    "cmap = plt.get_cmap('bwr')\n",
+    "# norm = Normalize(vmin=norm_theta.min(), vmax=norm_theta.max())\n",
+    "norm = Normalize(vmin=-np.pi, vmax=np.pi)\n",
     "fig,ax = plt.subplots(1,1,figsize=(7.2,7.2))\n",
     "ax.imshow(img,cmap = 'gray')\n",
     "ax.scatter(all_pts[:,0],all_pts[:,1],c = new_cmap,s = 7)\n",
     "ax.axis('off')\n",
-    "plt.savefig('delta theta coolwarm cmap.png',dpi = 700,transparent = True)"
+    "sm = ScalarMappable(cmap=cmap, norm=norm)\n",
+    "sm.set_array([])\n",
+    "\n",
+    "# 使用 make_axes_locatable 创建一个与当前轴相关的分区\n",
+    "divider = make_axes_locatable(ax)\n",
+    "# 在右侧添加一个新的轴，用于放置 colorbar\n",
+    "cax = divider.append_axes(\"right\", size=\"5%\", pad=0.05)\n",
+    "\n",
+    "# 添加颜色条到新的轴上，并且设置其高度与原图相同\n",
+    "cbar = fig.colorbar(sm, cax=cax, orientation='vertical')\n",
+    "ticks = [-np.pi,-2,-1, 0,1,2, np.pi]  # 定义ticks的位置\n",
+    "tick_labels = [r'$-\\pi$',r'$-2$' ,r'$-1$' ,r'$0$',r'$1$' ,r'$2$' , r'$\\pi$']  # 定义ticks的标签，这里使用 LaTeX 格式\n",
+    "\n",
+    "cbar.set_ticks(ticks)\n",
+    "cbar.set_ticklabels(tick_labels)\n",
+    "\n",
+    "# 如果你想要更加精确地控制colorbar的大小，可以调整size参数\n",
+    "# cax = divider.append_axes(\"right\", size=\"100%\", pad=0.05) # 这会使得colorbar宽度等于主图宽度\n",
+    "plt.savefig('delta theta bwr cmap with colorbar.png',dpi = 700,transparent = True)"
    ],
    "id": "96a555e2651e5f23",
    "outputs": [],
-   "execution_count": 123
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T14:05:45.327322Z",
-     "start_time": "2024-09-17T14:05:45.243756Z"
+     "end_time": "2024-09-21T09:31:55.609681Z",
+     "start_time": "2024-09-21T09:31:55.520830Z"
     }
    },
    "cell_type": "code",
@@ -1235,44 +1272,44 @@
     {
      "data": {
       "text/plain": [
-       "(array([ 3.,  5., 11.,  8.,  9., 10.,  8., 11., 10.,  9., 20., 12., 20.,\n",
-       "        16., 16., 21., 24., 13., 22., 21., 16., 21., 28., 29., 34., 28.,\n",
-       "        30., 26., 30., 35., 49., 37., 40., 44., 43., 46., 49., 55., 61.,\n",
-       "        49., 59., 49., 76., 54., 68., 65., 75., 79., 92., 90., 85., 95.,\n",
-       "        65., 85., 64., 73., 52., 59., 72., 68., 63., 54., 54., 67., 57.,\n",
-       "        50., 49., 39., 33., 44., 44., 36., 37., 25., 27., 15., 21., 21.,\n",
-       "        19., 24., 20., 24., 20., 11., 14., 16., 14., 12., 16., 14.,  9.,\n",
-       "        17.,  8., 12.,  8.,  8., 10.,  7.,  4.,  2.]),\n",
-       " array([0.        , 0.01993667, 0.03987333, 0.05981   , 0.07974666,\n",
-       "        0.09968333, 0.11962   , 0.13955666, 0.15949333, 0.17942999,\n",
-       "        0.19936666, 0.21930332, 0.23923999, 0.25917667, 0.27911332,\n",
-       "        0.29905   , 0.31898665, 0.33892334, 0.35885999, 0.37879667,\n",
-       "        0.39873332, 0.41867   , 0.43860665, 0.45854333, 0.47847998,\n",
-       "        0.49841666, 0.51835334, 0.53829002, 0.55822664, 0.57816333,\n",
-       "        0.59810001, 0.61803669, 0.63797331, 0.65790999, 0.67784667,\n",
-       "        0.69778335, 0.71771997, 0.73765665, 0.75759333, 0.77753001,\n",
-       "        0.79746664, 0.81740332, 0.83734   , 0.85727668, 0.8772133 ,\n",
-       "        0.89714998, 0.91708666, 0.93702334, 0.95695996, 0.97689664,\n",
-       "        0.99683332, 1.01677001, 1.03670669, 1.05664337, 1.07658005,\n",
-       "        1.09651661, 1.11645329, 1.13638997, 1.15632665, 1.17626333,\n",
-       "        1.19620001, 1.21613669, 1.23607337, 1.25600994, 1.27594662,\n",
-       "        1.2958833 , 1.31581998, 1.33575666, 1.35569334, 1.37563002,\n",
-       "        1.3955667 , 1.41550326, 1.43543994, 1.45537663, 1.47531331,\n",
-       "        1.49524999, 1.51518667, 1.53512335, 1.55506003, 1.57499671,\n",
-       "        1.59493327, 1.61486995, 1.63480663, 1.65474331, 1.67467999,\n",
-       "        1.69461668, 1.71455336, 1.73449004, 1.7544266 , 1.77436328,\n",
-       "        1.79429996, 1.81423664, 1.83417332, 1.85411   , 1.87404668,\n",
-       "        1.89398336, 1.91391993, 1.93385661, 1.95379329, 1.97372997,\n",
-       "        1.99366665]),\n",
+       "(array([ 3.,  4., 10.,  8.,  8., 12.,  9.,  7., 10., 13., 13., 13., 21.,\n",
+       "        15., 20., 14., 24., 18., 16., 18., 22., 20., 21., 34., 30., 32.,\n",
+       "        28., 30., 32., 26., 51., 33., 34., 41., 56., 43., 43., 50., 59.,\n",
+       "        57., 43., 66., 63., 57., 63., 77., 64., 77., 90., 88., 91., 93.,\n",
+       "        67., 85., 65., 73., 62., 67., 60., 63., 72., 55., 58., 57., 57.,\n",
+       "        61., 52., 40., 37., 26., 48., 42., 45., 27., 26., 16., 22., 13.,\n",
+       "        20., 26., 16., 23., 24., 20., 16., 11., 17., 20., 10., 12., 11.,\n",
+       "        12.,  8., 11., 11.,  7., 12.,  9.,  4.,  3.]),\n",
+       " array([0.        , 0.01      , 0.02      , 0.03      , 0.04      ,\n",
+       "        0.05      , 0.06      , 0.07      , 0.08      , 0.09      ,\n",
+       "        0.1       , 0.11      , 0.12      , 0.13      , 0.14      ,\n",
+       "        0.15000001, 0.16      , 0.17      , 0.18000001, 0.19      ,\n",
+       "        0.2       , 0.20999999, 0.22      , 0.23      , 0.23999999,\n",
+       "        0.25      , 0.25999999, 0.27000001, 0.28      , 0.28999999,\n",
+       "        0.30000001, 0.31      , 0.31999999, 0.33000001, 0.34      ,\n",
+       "        0.34999999, 0.36000001, 0.37      , 0.38      , 0.38999999,\n",
+       "        0.40000001, 0.41      , 0.41999999, 0.43000001, 0.44      ,\n",
+       "        0.44999999, 0.46000001, 0.47      , 0.47999999, 0.49000001,\n",
+       "        0.5       , 0.50999999, 0.51999998, 0.52999997, 0.54000002,\n",
+       "        0.55000001, 0.56      , 0.56999999, 0.57999998, 0.58999997,\n",
+       "        0.60000002, 0.61000001, 0.62      , 0.63      , 0.63999999,\n",
+       "        0.64999998, 0.66000003, 0.67000002, 0.68000001, 0.69      ,\n",
+       "        0.69999999, 0.70999998, 0.72000003, 0.73000002, 0.74000001,\n",
+       "        0.75      , 0.75999999, 0.76999998, 0.77999997, 0.79000002,\n",
+       "        0.80000001, 0.81      , 0.81999999, 0.82999998, 0.83999997,\n",
+       "        0.85000002, 0.86000001, 0.87      , 0.88      , 0.88999999,\n",
+       "        0.89999998, 0.91000003, 0.92000002, 0.93000001, 0.94      ,\n",
+       "        0.94999999, 0.95999998, 0.97000003, 0.98000002, 0.99000001,\n",
+       "        1.        ]),\n",
        " <BarContainer object of 100 artists>)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 112
+   "execution_count": 22
   },
   {
    "metadata": {
