fig3 new version updated

--- a/notebooks/figure files/figure 3b new requirement/new figure 3b.ipynb
+++ b/notebooks/figure files/figure 3b new requirement/new figure 3b.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-21T08:49:46.882085Z",
-     "start_time": "2024-09-21T08:49:46.870052Z"
+     "end_time": "2024-10-24T08:52:41.869664Z",
+     "start_time": "2024-10-24T08:52:41.359499Z"
     }
    },
    "source": [
@@ -16,75 +16,79 @@
     "import matplotlib.colors as mc\n",
     "%matplotlib qt"
    ],
-   "execution_count": 7,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-21T08:49:56.091158Z",
-     "start_time": "2024-09-21T08:49:56.076209Z"
+     "end_time": "2024-10-24T08:52:41.885654Z",
+     "start_time": "2024-10-24T08:52:41.870654Z"
     }
    },
    "cell_type": "code",
    "source": "categories = ['Ti', 'V', 'Mn', 'Co']",
    "id": "24cd889db7501e68",
-   "execution_count": 8,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-21T08:50:02.514162Z",
-     "start_time": "2024-09-21T08:50:02.507186Z"
+     "end_time": "2024-10-24T08:52:41.901238Z",
+     "start_time": "2024-10-24T08:52:41.887239Z"
     }
    },
    "cell_type": "code",
    "source": "plt.style.use('default')",
    "id": "f50c53e46340ff19",
-   "execution_count": 9,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-21T08:50:14.701622Z",
-     "start_time": "2024-09-21T08:50:14.692652Z"
+     "end_time": "2024-10-24T08:52:41.916241Z",
+     "start_time": "2024-10-24T08:52:41.903240Z"
     }
    },
    "cell_type": "code",
    "source": "mc.to_rgb('C0')",
    "id": "24d34bf21bf1f211",
-   "execution_count": 11,
-   "outputs": []
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "execution_count": null,
-   "source": "0",
-   "id": "555395659890323a",
-   "outputs": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.12156862745098039, 0.4666666666666667, 0.7058823529411765)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-21T09:21:59.586497Z",
-     "start_time": "2024-09-21T09:21:59.063868Z"
+     "end_time": "2024-10-24T09:00:55.801012Z",
+     "start_time": "2024-10-24T09:00:55.331668Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Sample data\n",
-    "#c0:V1,C1:V2,C2:V1+V1,C3:V2+v1,C4:v1+v1+v1,C5:V2+V2+V1\n",
-    "values1 = [3, 5, 1, 1]#C0,C1,C2,C5\n",
-    "colors1 = [mc.to_rgb('C0'),mc.to_rgb('C1'),mc.to_rgb('C2'),mc.to_rgb('C5')]\n",
-    "values2 = [10, 4, 1, 1,1]#C0,C1,C2,C3,C4\n",
-    "colors2 = [mc.to_rgb('C0'),mc.to_rgb('C1'),mc.to_rgb('C2'),mc.to_rgb('C3'),mc.to_rgb('C4')]\n",
-    "values3 = [4,1]#C0,C2\n",
-    "colors3 = [mc.to_rgb('C0'),mc.to_rgb('C2')]\n",
-    "values4 = [7,2,1]#C0,C1,C2\n",
-    "colors4 = [mc.to_rgb('C0'),mc.to_rgb('C1'),mc.to_rgb('C2')]\n",
+    "#C0: un-paried\n",
+    "#c1:V1,C2:V2,C3:V1+V1,C4:V2+v1,C5:v1+v1+v1,C6:V2+V2+V1\n",
+    "values1 = [3, 5, 1, 1]#C1,C2,C3,C6\n",
+    "colors1 = [mc.to_rgb('C1'),mc.to_rgb('C2'),mc.to_rgb('C3'),mc.to_rgb('C6')]\n",
+    "values2 = [6,10, 4, 1, 1,1]#C0,C1,C2,C3,C4,C5\n",
+    "colors2 = [mc.to_rgb('C0'),mc.to_rgb('C1'),mc.to_rgb('C2'),mc.to_rgb('C3'),mc.to_rgb('C4'),mc.to_rgb('C5')]\n",
+    "values3 = [1,4,1]#c0,C1,C3\n",
+    "colors3 = [mc.to_rgb('C0'),mc.to_rgb('C1'),mc.to_rgb('C3')]\n",
+    "values4 = [3,7,2,1]#C0,C1,C2,C3\n",
+    "colors4 = [mc.to_rgb('C0'),mc.to_rgb('C1'),mc.to_rgb('C2'),mc.to_rgb('C3')]\n",
     "\n",
     "# Number of categories\n",
     "n_categories = len(categories)\n",
@@ -100,9 +104,9 @@
     "\n",
     "# Plotting each set of bars\n",
     "ax.bar([-0.21,-0.07,0.07,0.21],values1,bar_width,color=colors1)\n",
-    "ax.bar([0.72,0.86,1,1.14,1.28],values2,bar_width,color=colors2)\n",
-    "ax.bar([1.93,2.07],values3,bar_width,color=colors3)\n",
-    "ax.bar([2.86,3,3.14],values4,bar_width,color=colors4)\n",
+    "ax.bar([0.65,0.79,0.93,1.07,1.21,1.35],values2,bar_width,color=colors2)\n",
+    "ax.bar([1.93-0.07,2,2.14],values3,bar_width,color=colors3)\n",
+    "ax.bar([2.79,2.93,3.07,3.21],values4,bar_width,color=colors4)\n",
     "\n",
     "# Adding labels and title\n",
     "# ax.set_xlabel('Categories')\n",
@@ -118,22 +122,22 @@
     "plt.savefig('new figure 3b.png',dpi = 500)"
    ],
    "id": "8f5304d85d84fad9",
-   "execution_count": 34,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-21T09:24:27.346415Z",
-     "start_time": "2024-09-21T09:24:26.772331Z"
+     "end_time": "2024-10-24T09:00:49.792971Z",
+     "start_time": "2024-10-24T09:00:49.246465Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "values5 = [1, 2, 3, 4,5,6]\n",
+    "values5 = [1, 2, 3, 4,5,6,7]\n",
     "bar_width = 0.1\n",
     "colors5 = [mc.to_rgb('C0'),mc.to_rgb('C1'),mc.to_rgb('C2'),mc.to_rgb('C3'),mc.to_rgb('C4'),mc.to_rgb('C5'),mc.to_rgb('C6')]\n",
-    "labels = [r\"D-V$_{Se}$\",r\"D-V$_{Se_2}$\",r\"D-V$_{Se}$-V$_{Se}$\",r\"D-V$_{Se_2}$-V$_{Se}$\",r\"D-V$_{Se}$-V$_{Se}$-V$_{Se}$\",r\"D-V$_{Se_2}$-V$_{Se_2}$-V$_{Se}$\"]\n",
+    "labels = [r\"D-$Se_2$\",r\"D-V$_{Se}$\",r\"D-V$_{Se_2}$\",r\"D-V$_{Se}$-V$_{Se}$\",r\"D-V$_{Se_2}$-V$_{Se}$\",r\"D-V$_{Se}$-V$_{Se}$-V$_{Se}$\",r\"D-V$_{Se_2}$-V$_{Se_2}$-V$_{Se}$\"]\n",
     "fig, ax = plt.subplots(figsize=(10,7))\n",
     "for i in range(len(values5)):\n",
     "    ax.bar(i,values5[i],bar_width,color = colors5[i],label = labels[i])\n",
@@ -141,8 +145,8 @@
     "plt.savefig('legend.png',dpi = 500,transparent = True)"
    ],
    "id": "d629f4b36db5670e",
-   "execution_count": 36,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "metadata": {},
